--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     <p class="b">B</p>
                     <div class="previewBox">
                         <p>A</p>
-                        <img class="box" src="assets/RGBLogo.png" alt="">
+                        <div class="box">
+                            <div id="box"></div>
+                        </div>
                     </div>
                 </div>
             </div>
