--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                         </div>
                         <div class="size">
                             <h4>+A3</h4>
-                            <div class="count" id="HSA3value"></div>
+                            <div class="count" id="HSA3value">
+                            </div>
                         </div>
                     </div>
                 </div>
